# SandCastle

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  copilot-instructions.md  imgui.ini
.claude/: settings.local.json
Content/Models/viking_room/: viking_room.mtl
Content/Shaders/Compiled/DXIL/: CustomSampling.frag.dxil  DepthOutline.frag.dxil  FillTexture.comp.dxil  Fullscreen.vert.dxil  GradientTexture.comp.dxil  Grid.frag.dxil  Grid.vert.dxil  LinearToSRGB.comp.dxil  LinearToST2084.comp.dxil  PBR.frag.dxil  PBR.vert.dxil  Phong.frag.dxil  Phong.vert.dxil  PositionColorInstanced.vert.dxil  PositionColorTransform.vert.dxil  PullSpriteBatch.vert.dxil  RawTriangle.vert.dxil  Skybox.frag.dxil  Skybox.vert.dxil  SolidColorDepth.frag.dxil  SpriteBatch.comp.dxil  TexturedQuad.comp.dxil  TexturedQuadArray.frag.dxil  TexturedQuadColorWithMatrix.vert.dxil  TexturedQuadWithMatrix.vert.dxil  ToneMapACES.comp.dxil  ToneMapExtendedReinhardLuminance.comp.dxil  ToneMapHable.comp.dxil  ToneMapReinhard.comp.dxil
Content/Shaders/Compiled/MSL/: Grid.frag.msl  Grid.vert.msl  PBR.frag.msl  PBR.vert.msl  Phong.frag.msl  Phong.vert.msl
Content/Shaders/Compiled/SPIRV/: Grid.frag.spv  Grid.vert.spv  PBR.frag.spv  PBR.vert.spv  Phong.frag.spv  Phong.vert.spv  ToneMapACES.comp.spv
Content/Shaders/Source/: Billboard.frag.hlsl  Billboard.vert.hlsl  Common.hlsl  Grid.frag.hlsl  Grid.vert.hlsl  PBR.frag.hlsl  PBR.vert.hlsl  Phong.frag.hlsl  Phong.vert.hlsl  compile.sh
Engine/: CMakeLists.txt  Components.cpp  Components.h  Engine.cpp  Engine.h  Entity.cpp  Entity.h  Input.h  Interfaces.h  Nodes.h  Renderer.cpp  Renderer.h  Systems.cpp  Systems.h  UIManager.cpp  UIManager.h
Engine/Render/: MeshCommon.cpp  MeshCommon.h  RenderStructs.h
Game/: CMakeLists.txt  Game.cpp  Game.h  GameObject.h  Player.cpp  Player.h  Scene.cpp  Scene.h  main.cpp
Game/Components/: BaseComponent.cpp  BaseComponent.h  TransformComponent.cpp  TransformComponent.h
src/: CMakeLists.txt  Engine.cpp  Engine.h  Game.cpp  Game.h  main.cpp
